# KoalaToolbox

./: LICENSE  README.md
Factory/: CMakeLists.txt  FactoryTest.cbp  FactoryTest.depend  README
Factory/Core/include/: CreationLists.h  ObjectCreator.h
Factory/Test/include/: Color.h  DerivedAliases.h  Derivee1.h  Derivee2.h  Derivees_fwd.h  Factory.h
Factory/Test/src/: Factory.cpp  main.cpp
Factory/autotools/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
Factory/autotools/autom4te.cache/: output.0  output.2  output.3  requests  traces.2  traces.3  traces.4
Factory/cmake/: CMakeLists.txt
Factory/cmake/Modules/: FindCatch.cmake
Factory/doxygen/: CMakeLists.txt  Doxyfile.in
Factory/examples/: CMakeLists.txt
Factory/examples/include/: Base.h  Base.hpp  Color.hpp  Derivee1.hpp  Derivee2.hpp  ParameterLists.hpp  ParameterTraits.hpp
Factory/examples/src/: Base.cpp  Color.cpp  Derivee1.cpp  Derivee2.cpp  Factory.cpp  main.cpp
Factory/extlib/: CMakeLists.txt
Factory/lib/: CMakeLists.txt
Factory/lib/Factory/: CMakeLists.txt  Factory.cmake
Factory/lib/Factory/include/: CoreImplementation.h  Factory.hpp
Locator/: README.md
Notes/: CMakeLists.txt  COPYING  README  config.h.in
Notes/app/: CMakeLists.txt  main.cpp
Notes/lib/: CMakeLists.txt
Notes/lib/include/: Sequence.hpp
Notes/lib/src/: Sequence.cpp
Signal/: Copyright.txt  README.md  readme.html
Signals/: CMakeLists.txt  LICENSE  README  README.md
Signals/include/: Signal.hpp
Signals/lib/: CMakeLists.txt  Signals.cmake
Signals/lib/include/: Signal.hpp
Signals/tests/: testSignals.cmake
Signals/tests/Signals/: Blocking.cpp  CMakeLists.txt  Main.cpp  MultipleSlots.cpp  Scope.cpp  TestingStructs.hpp
other_language/: README.md  changes.md  description.md  functionalities.md  structured.md
