cmake_minimum_required(VERSION 3.7)
project(Signals VERSION 1.0)
set(DESCRIPTION "a simple factory DP implementation")
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules/")
find_package(Doxygen)
add_subdirectory(extlib)
if(DOXYGEN_FOUND)
	option(BUILD_DOCS "Should we build the documentation" ON)
endif()
option(BUILD_EXAMPLES "Should we build the minimalistic example?" OFF)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_subdirectory(lib)
if(BUILD_DOCS)
	add_subdirectory(doxygen)

endif()
if(BUILD_EXAMPLES)
	add_subdirectory(examples)
endif()
