bin_PROGRAMS = factorytest
AM_CXXFLAGS = $(INIT_CXXFLAGS) -std=c++11 -I${srcdir}/../Test/include \
	-I${srcdir}/../Core/include
factorytest_SOURCES = \
	../Test/src/Base.cpp \
	../Test/src/Color.cpp \
	../Test/src/Derivee1.cpp \
	../Test/src/Derivee2.cpp \
	../Test/src/Factory.cpp \
	../Test/src/main.cpp
