
if(NOT DESCRIPTION)
    message(WARNING "please set the DESCRIPTION variable in the sub-project's root CMakeLists.txt")
endif()
string(TOUPPER ${PROJECT_NAME} upName)
if(BUILD_DOCS)
    #some tuning to complies with Doxyfile syntax
    option(DOCS_BUILD_HTML "Should we build the documentation in HTML format" ON)
    option(DOCS_BUILD_LATEX "Should we build the documentation in LATEX format" OFF)
    option(DOCS_BUILD_XML "Should we build the documentation in XML format" OFF)
    option(DOCS_BUILD_RTF "Should we build the documentation in RTF format" OFF)
    option(DOCS_BUILD_MAN "Should we build the documentation in MAN format" OFF)
    option(DOCS_BUILD_ECLIPSE "Should we build the documentation for eclipse format" OFF)
    option(DOCS_BUILD_QHP "Should we build the documentation in QHP format" OFF)
    option(DOCS_BUILD_TESTLIST "Should we build the tests list" ON)
    option(DOCS_BUILD_TODO "Should we build a todo list" ON)
    option(DOCS_BUILD_BUGS "Should we build a bugs list" ON)
    option(DOCS_BUILD_INTERNAL "Should we build internal documentation" ON)
    option(DOCS_BUILD_DEPRECTATED "Should we build a deprecated function list" ON)
    if(fDOCS_BUILD_HTML)
        set(BUILD_HTML "YES")
    else()
        set(BUILD_HTML "NO")
    endif()
    if(DOCS_BUILD_LATEX)
        set(BUILD_LATEX "YES")
    else()
        set(BUILD_LATEX "NO")
    endif()
    if(DOCS_BUILD_XML)
        set(BUILD_XML "YES")
    else()
        set(BUILD_XML "NO")
    endif()
    if(DOCS_BUILD_RTF)
        set(BUILD_RTF "YES")
    else()
        set(BUILD_RTF "NO")
    endif()
    if(DOCS_BUILD_MAN)
        set(BUILD_MAN "YES")
    else()
        set(BUILD_MAN "NO")
    endif()
    if(DOCS_BUILD_QHP)
        set(BUILD_QHP "YES")
    else()
        set(BUILD_QHP "NO")
    endif()
    if(DOCS_BUILD_ECLIPSE)
        set(BUILD_ECLIPSE "YES")
    else()
        set(BUILD_ECLIPSE "NO")
    endif()
    if(DOCS_BUILD_TESTLIST)
        set(BUILD_TESTLIST "YES")
    else()
        set(BUILD_TESTLIST "NO")
    endif()
    if(DOCS_BUILD_TODO)
        set(BUILD_TODOLIST "YES")
    else()
        set(BUILD_TODOLIST "NO")
    endif()
    if(DOCS_BUILD_BUG)
        set(BUILD_BUGLIST "YES")
    else()
        set(BUILD_BUGLIST "NO")
    endif()
    if(DOCS_BUILD_DEPRECATED)
        set(BUILD_DEPRECATEDLIST "YES")
    else()
        set(BUILD_DEPRECATEDLIST "NO")
    endif()
    if(BUILD_INTERNAL)
        set(BUILD_INTERNALS "YES")
    else()
        set(BUILD_INTERNALS "NO")
    endif()
	if(NOT BUILD_DOC_CATCH)
		set(EXCLUDES "../extlib")
	endif()

    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in"
                   "${PROJECT_BINARY_DIR}/docs/Doxyfile" @ONLY)
    add_custom_target(docs ALL ${DOXYGEN_EXECUTABLE}
                      WORKING_DIRECTORY "${PROJECT_BINARY_DIR}/docs"
                      COMMENT "Generating ${PROJECT_NAME} documentation" SILENT)
endif() 
